--- a/src/settings.html
+++ b/src/settings.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./styles/main.css" />
-		<title>Задачи</title>
+		<title>Настройки</title>
 	</head>
 	<body>
 		<header class="header">
-			<span class="header_title">Задачи</span>
+			<span class="header_title">Настройки</span>
 		</header>
 
 		<main class="main">
@@ -27,7 +27,7 @@
 								fill="gray"
 							/>
 						</svg>
-						<span class="menu_text">Складской учет</span>
+						<span class="menu_text">Настройка 1</span>
 					</a>
 				</div>
 				<div class="menu_item">
@@ -61,7 +61,7 @@
 								fill="black"
 							/>
 						</svg>
-						<span class="menu_text selectedText">Учет в производстве</span>
+						<span class="menu_text selectedText">Настройка 2</span>
 					</a>
 				</div>
 			</div>
