--- a/src/accountingInProduction.html
+++ b/src/accountingInProduction.html
@@ -30,7 +30,7 @@
 				</div>
 
 				<div class="menu_item">
-					<a href="#">
+					<a href="filter_page.html">
 						<span class="menu_text selectedText none-ml"
 							>Внутризаводские накладные (Расход)</span
 						>
