--- a/src/index.html
+++ b/src/index.html
@@ -47,16 +47,22 @@
 
 	<footer class='footer'>
 		<div class='footer_item'>
-			<img src="/public/images/icons/footer/menu_24px.svg" alt="menu">
-			<span>Меню</span>
+			<a href="index.html">
+				<img src="/public/images/icons/footer/menu_24px.svg" alt="menu">
+				<span>Меню</span>
+			</a>
 		</div>
 		<div class='footer_item'>
-			<img src="/public/images/icons/footer/scanner.svg" alt="scanner">
-			<span>Сканер</span>
+			<a href="#">
+				<img src="/public/images/icons/footer/scanner.svg" alt="scanner">
+				<span>Сканер</span>
+			</a>
 		</div>
 		<div class='footer_item'>
-			<img src="/public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
-			<span>Назад</span>
+			<a href="#">
+				<img src="/public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
+				<span>Назад</span>
+			</a>
 		</div>
 	</footer>
 </body>
