add link to menu in all pages

--- a/src/filter_page.html
+++ b/src/filter_page.html
@@ -47,21 +47,24 @@
 			</form>
 		</main>
 
-		<footer class="footer">
-			<div class="footer_item">
-				<img src="/public/images/icons/footer/menu_24px.svg" alt="menu" />
-				<span>Меню</span>
+		<footer class='footer'>
+			<div class='footer_item'>
+				<a href="index.html">
+					<img src="/public/images/icons/footer/menu_24px.svg" alt="menu">
+					<span>Меню</span>
+				</a>
 			</div>
-			<div class="footer_item">
-				<img src="/public/images/icons/footer/scanner.svg" alt="scanner" />
-				<span>Сканер</span>
+			<div class='footer_item'>
+				<a href="#">
+					<img src="/public/images/icons/footer/scanner.svg" alt="scanner">
+					<span>Сканер</span>
+				</a>
 			</div>
-			<div class="footer_item">
-				<img
-					src="/public/images/icons/footer/arrow_back_24px.svg"
-					alt="arrow_back"
-				/>
-				<span>Назад</span>
+			<div class='footer_item'>
+				<a href="#">
+					<img src="/public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
+					<span>Назад</span>
+				</a>
 			</div>
 		</footer>
 	</body>
