--- a/src/settings.html
+++ b/src/settings.html
@@ -31,7 +31,7 @@
 					</a>
 				</div>
 				<div class="menu_item">
-					<a href="accountingInProduction.html">
+					<a href="#">
 						<svg
 							width="24"
 							height="24"
@@ -67,21 +67,24 @@
 			</div>
 		</main>
 
-		<footer class="footer">
-			<div class="footer_item">
-				<img src="/public/images/icons/footer/menu_24px.svg" alt="menu" />
-				<span>Меню</span>
+		<footer class='footer'>
+			<div class='footer_item'>
+				<a href="index.html">
+					<img src="/public/images/icons/footer/menu_24px.svg" alt="menu">
+					<span>Меню</span>
+				</a>
 			</div>
-			<div class="footer_item">
-				<img src="/public/images/icons/footer/scanner.svg" alt="scanner" />
-				<span>Сканер</span>
+			<div class='footer_item'>
+				<a href="#">
+					<img src="/public/images/icons/footer/scanner.svg" alt="scanner">
+					<span>Сканер</span>
+				</a>
 			</div>
-			<div class="footer_item">
-				<img
-					src="/public/images/icons/footer/arrow_back_24px.svg"
-					alt="arrow_back"
-				/>
-				<span>Назад</span>
+			<div class='footer_item'>
+				<a href="#">
+					<img src="/public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
+					<span>Назад</span>
+				</a>
 			</div>
 		</footer>
 	</body>
