--- a/src/filter_page.html
+++ b/src/filter_page.html
@@ -13,7 +13,7 @@
 		</header>
 
 		<main class="main">
-			<form class="main_form">
+			<form class="main_form" id='main_form'>
 				<fieldset class="form_item">
 					<legend>Номер ВЗН</legend>
 					<input type="number" />
@@ -35,11 +35,9 @@
 				</fieldset>
 
 				<div class="form_btns">
-					<a href="listVZN_page">
-						<button class="btn_bg-blue btn_border-none">
-							Поиск
-						</button>
-					</a>
+					<button class="btn_bg-blue btn_border-none" id='btn-search'>
+						Поиск
+					</button>
 					<button class="btn_bg-transparent btn_color-blue">
 						Отмена
 					</button>
@@ -64,5 +62,7 @@
 				<span>Назад</span>
 			</div>
 		</footer>
+
+		<script defer src='./js/form_validation.js'></script>
 	</body>
 </html>
