add functional to back previous page

--- a/src/VZN_RASHOD-page.html
+++ b/src/VZN_RASHOD-page.html
@@ -38,7 +38,7 @@
 					<span>Сканер</span>
 				</a>
 			</div>
-			<div class='footer_item'>
+			<div class='footer_item' id='backToPage'>
 				<a href="#">
 					<img src="/public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
 					<span>Назад</span>
@@ -47,5 +47,6 @@
 		</footer>
 
 		<script defer type='module' src='./js/listOfOverheadData.js'></script>
+		<script src='./js/backToPage.js'></script>
 	</body>
 </html>
