--- a/src/filter_page.html
+++ b/src/filter_page.html
@@ -58,7 +58,7 @@
 					<span>Сканер</span>
 				</a>
 			</div>
-			<div class='footer_item'>
+			<div class='footer_item' id='backToPage'>
 				<a href="#">
 					<img src="/public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
 					<span>Назад</span>
@@ -67,5 +67,6 @@
 		</footer>
 
 		<script defer src='./js/form_validation.js'></script>
+		<script src='./js/backToPage.js'></script>
 	</body>
 </html>
