--- a/src/index.html
+++ b/src/index.html
@@ -58,12 +58,13 @@
 				<span>Сканер</span>
 			</a>
 		</div>
-		<div class='footer_item'>
+		<div class='footer_item' id='backToPage'>
 			<a href="#">
 				<img src="/public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
 				<span>Назад</span>
 			</a>
 		</div>
 	</footer>
+	<script src='./js/backToPage.js'></script>
 </body>
 </html>
