--- a/VZN_RASHOD-page.html
+++ b/VZN_RASHOD-page.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./styles/main.css" />
+		<link rel="stylesheet" href="./src/styles/main.css" />
 		<title>Фильтр ВЗН</title>
 	</head>
 	<body>
@@ -46,7 +46,7 @@
 			</div>
 		</footer>
 
-		<script defer type='module' src='./js/listOfOverheadData.js'></script>
-		<script src='./js/backToPage.js'></script>
+		<script defer type='module' src='./src/js/listOfOverheadData.js'></script>
+		<script src='./src/js/backToPage.js'></script>
 	</body>
 </html>
