--- a/accountingInProduction.html
+++ b/accountingInProduction.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./styles/main.css" />
+		<link rel="stylesheet" href="./src/styles/main.css" />
 		<title>Учет в производстве</title>
 	</head>
 	<body>
@@ -76,6 +76,6 @@
 			</div>
 		</footer>
 
-		<script src='./js/backToPage.js'></script>
+		<script src='./src/js/backToPage.js'></script>
 	</body>
 </html>
