--- a/tasks.html
+++ b/tasks.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./styles/main.css" />
-		<title>Настройки</title>
+		<link rel="stylesheet" href="./src/styles/main.css" />
+		<title>Задачи</title>
 	</head>
 	<body>
 		<header class="header">
-			<span class="header_title">Настройки</span>
+			<span class="header_title">Задачи</span>
 		</header>
 
 		<main class="main">
@@ -27,11 +27,11 @@
 								fill="gray"
 							/>
 						</svg>
-						<span class="menu_text">Настройка 1</span>
+						<span class="menu_text">Складской учет</span>
 					</a>
 				</div>
 				<div class="menu_item">
-					<a href="#">
+					<a href="accountingInProduction.html">
 						<svg
 							width="24"
 							height="24"
@@ -61,7 +61,7 @@
 								fill="black"
 							/>
 						</svg>
-						<span class="menu_text selectedText">Настройка 2</span>
+						<span class="menu_text selectedText">Учет в производстве</span>
 					</a>
 				</div>
 			</div>
@@ -88,6 +88,6 @@
 			</div>
 		</footer>
 
-		<script src='./js/backToPage.js'></script>
+		<script src='./src/js/backToPage.js'></script>
 	</body>
 </html>
