change link of arrow-back img for test on githubPages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 		<div class='footer_item' id='backToPage'>
 			<a href="#">
-				<img src="/public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
+				<img src="./public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
 				<span>Назад</span>
 			</a>
 		</div>
