fixed#2 for github pages

--- a/VZN_RASHOD-page.html
+++ b/VZN_RASHOD-page.html
@@ -28,13 +28,13 @@
 		<footer class='footer'>
 			<div class='footer_item'>
 				<a href="index.html">
-					<img src="/public/images/icons/footer/menu_24px.svg" alt="menu">
+					<img src="./public/images/icons/footer/menu24px.svg" alt="menu">
 					<span>Меню</span>
 				</a>
 			</div>
 			<div class='footer_item'>
 				<a href="#">
-					<img src="/public/images/icons/footer/scanner.svg" alt="scanner">
+					<img src="./public/images/icons/footer/scanner.svg" alt="scanner">
 					<span>Сканер</span>
 				</a>
 			</div>
