--- a/tasks.html
+++ b/tasks.html
@@ -70,19 +70,19 @@
 		<footer class='footer'>
 			<div class='footer_item'>
 				<a href="index.html">
-					<img src="/public/images/icons/footer/menu_24px.svg" alt="menu">
+					<img src="./public/images/icons/footer/menu24px.svg" alt="menu">
 					<span>Меню</span>
 				</a>
 			</div>
 			<div class='footer_item'>
 				<a href="#">
-					<img src="/public/images/icons/footer/scanner.svg" alt="scanner">
+					<img src="./public/images/icons/footer/scanner.svg" alt="scanner">
 					<span>Сканер</span>
 				</a>
 			</div>
 			<div class='footer_item' id='backToPage'>
 				<a href="#">
-					<img src="./public/images/icons/footer/arrow_back_24px.svg" alt="arrow_back">
+					<img src="./public/images/icons/footer/arrowBack24px.svg" alt="arrow_back">
 					<span>Назад</span>
 				</a>
 			</div>
