fixed#4 for github pages

--- a/filter_page.html
+++ b/filter_page.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header class="header header_gray-bg header-flex">
-			<img src="/public/images/icons/header/closeIcon.svg" alt="close-icon" />
+			<img src="./public/images/icons/header/closeIcon.svg" alt="close-icon" />
 			<span class="header_title header_title-ml">Фильтр ВЗН УП</span>
 		</header>
 
