--- a/VZN_RASHOD-page.html
+++ b/VZN_RASHOD-page.html
@@ -11,11 +11,11 @@
 			<span class="header_title header_title-ml">Фильтр ВЗН УП</span>
 			<div class='header_btns'>
 				<button>
-					<img src="/public/images/icons/header/searchBtnIcon.svg" alt="search">
+					<img src="./public/images/icons/header/searchBtnIcon.svg" alt="search">
 					<span>Поиск</span>
 				</button>
 				<button>
-					<img src="/public/images/icons/header/createBtnIcon.svg" alt="create">
+					<img src="./public/images/icons/header/createBtnIcon.svg" alt="create">
 					<span>Создать</span>
 				</button>
 			</div>
